packages/@aws-cdk/aws-stepfunctions-tasks/test/batch/run-batch-job.integ.snapshot/aws-stepfunctions-integ.template.json
{
 "Resources": {
  "vpcA2121C38": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc"
     }
    ]
   }
  },
  "vpcPublicSubnet1Subnet2E65531E": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1RouteTable48A2DF9B": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1RouteTableAssociation5D3F4579": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    }
   }
  },
  "vpcPublicSubnet1DefaultRoute10708846": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet1RouteTable48A2DF9B"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ]
  },
  "vpcPublicSubnet1EIPDA49DCBE": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet1NATGateway9C16659E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet1Subnet2E65531E"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet1EIPDA49DCBE",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet1"
     }
    ]
   }
  },
  "vpcPublicSubnet2Subnet009B674F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2RouteTableEB40D4CB": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2RouteTableAssociation21F81B59": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    }
   }
  },
  "vpcPublicSubnet2DefaultRouteA1EC0F60": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPublicSubnet2RouteTableEB40D4CB"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   },
   "DependsOn": [
    "vpcVPCGW7984C166"
   ]
  },
  "vpcPublicSubnet2EIP9B3743B1": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPublicSubnet2NATGateway9B8AE11A": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "vpcPublicSubnet2Subnet009B674F"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "vpcPublicSubnet2EIP9B3743B1",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PublicSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet1Subnet934893E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "vpcPrivateSubnet1RouteTableB41A48CC": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "vpcPrivateSubnet1RouteTableAssociation67945127": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet1Subnet934893E8"
    }
   }
  },
  "vpcPrivateSubnet1DefaultRoute1AA8E2E5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet1RouteTableB41A48CC"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet1NATGateway9C16659E"
    }
   }
  },
  "vpcPrivateSubnet2Subnet7031C2BA": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet2RouteTable7280F23E": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "vpcPrivateSubnet2RouteTableAssociation007E94D3": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "SubnetId": {
     "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
    }
   }
  },
  "vpcPrivateSubnet2DefaultRouteB0E07F99": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "vpcPrivateSubnet2RouteTable7280F23E"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "vpcPublicSubnet2NATGateway9B8AE11A"
    }
   }
  },
  "vpcIGWE57CBDCA": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "aws-stepfunctions-integ/vpc"
     }
    ]
   }
  },
  "vpcVPCGW7984C166": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "vpcA2121C38"
    },
    "InternetGatewayId": {
     "Ref": "vpcIGWE57CBDCA"
    }
   }
  },
  "ComputeEnvResourceSecurityGroupB84CF86B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "aws-stepfunctions-integ/ComputeEnv/Resource-Security-Group",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "vpcA2121C38"
    }
   },
   "DependsOn": [
    "vpcIGWE57CBDCA",
    "vpcPrivateSubnet1DefaultRoute1AA8E2E5",
    "vpcPrivateSubnet1RouteTableB41A48CC",
    "vpcPrivateSubnet1RouteTableAssociation67945127",
    "vpcPrivateSubnet1Subnet934893E8",
    "vpcPrivateSubnet2DefaultRouteB0E07F99",
    "vpcPrivateSubnet2RouteTable7280F23E",
    "vpcPrivateSubnet2RouteTableAssociation007E94D3",
    "vpcPrivateSubnet2Subnet7031C2BA",
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1EIPDA49DCBE",
    "vpcPublicSubnet1NATGateway9C16659E",
    "vpcPublicSubnet1RouteTable48A2DF9B",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579",
    "vpcPublicSubnet1Subnet2E65531E",
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2EIP9B3743B1",
    "vpcPublicSubnet2NATGateway9B8AE11A",
    "vpcPublicSubnet2RouteTableEB40D4CB",
    "vpcPublicSubnet2RouteTableAssociation21F81B59",
    "vpcPublicSubnet2Subnet009B674F",
    "vpcA2121C38",
    "vpcVPCGW7984C166"
   ]
  },
  "ComputeEnvEcsInstanceRoleCFB290F9": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": {
         "Fn::Join": [
          "",
          [
           "ec2.",
           {
            "Ref": "AWS::URLSuffix"
           }
          ]
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "vpcIGWE57CBDCA",
    "vpcPrivateSubnet1DefaultRoute1AA8E2E5",
    "vpcPrivateSubnet1RouteTableB41A48CC",
    "vpcPrivateSubnet1RouteTableAssociation67945127",
    "vpcPrivateSubnet1Subnet934893E8",
    "vpcPrivateSubnet2DefaultRouteB0E07F99",
    "vpcPrivateSubnet2RouteTable7280F23E",
    "vpcPrivateSubnet2RouteTableAssociation007E94D3",
    "vpcPrivateSubnet2Subnet7031C2BA",
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1EIPDA49DCBE",
    "vpcPublicSubnet1NATGateway9C16659E",
    "vpcPublicSubnet1RouteTable48A2DF9B",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579",
    "vpcPublicSubnet1Subnet2E65531E",
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2EIP9B3743B1",
    "vpcPublicSubnet2NATGateway9B8AE11A",
    "vpcPublicSubnet2RouteTableEB40D4CB",
    "vpcPublicSubnet2RouteTableAssociation21F81B59",
    "vpcPublicSubnet2Subnet009B674F",
    "vpcA2121C38",
    "vpcVPCGW7984C166"
   ]
  },
  "ComputeEnvInstanceProfile81AFCCF2": {
   "Type": "AWS::IAM::InstanceProfile",
   "Properties": {
    "Roles": [
     {
      "Ref": "ComputeEnvEcsInstanceRoleCFB290F9"
     }
    ]
   },
   "DependsOn": [
    "vpcIGWE57CBDCA",
    "vpcPrivateSubnet1DefaultRoute1AA8E2E5",
    "vpcPrivateSubnet1RouteTableB41A48CC",
    "vpcPrivateSubnet1RouteTableAssociation67945127",
    "vpcPrivateSubnet1Subnet934893E8",
    "vpcPrivateSubnet2DefaultRouteB0E07F99",
    "vpcPrivateSubnet2RouteTable7280F23E",
    "vpcPrivateSubnet2RouteTableAssociation007E94D3",
    "vpcPrivateSubnet2Subnet7031C2BA",
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1EIPDA49DCBE",
    "vpcPublicSubnet1NATGateway9C16659E",
    "vpcPublicSubnet1RouteTable48A2DF9B",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579",
    "vpcPublicSubnet1Subnet2E65531E",
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2EIP9B3743B1",
    "vpcPublicSubnet2NATGateway9B8AE11A",
    "vpcPublicSubnet2RouteTableEB40D4CB",
    "vpcPublicSubnet2RouteTableAssociation21F81B59",
    "vpcPublicSubnet2Subnet009B674F",
    "vpcA2121C38",
    "vpcVPCGW7984C166"
   ]
  },
  "ComputeEnvResourceServiceInstanceRoleCF89E9E1": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "batch.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "ManagedPolicyArns": [
     {
      "Fn::Join": [
       "",
       [
        "arn:",
        {
         "Ref": "AWS::Partition"
        },
        ":iam::aws:policy/service-role/AWSBatchServiceRole"
       ]
      ]
     }
    ]
   },
   "DependsOn": [
    "vpcIGWE57CBDCA",
    "vpcPrivateSubnet1DefaultRoute1AA8E2E5",
    "vpcPrivateSubnet1RouteTableB41A48CC",
    "vpcPrivateSubnet1RouteTableAssociation67945127",
    "vpcPrivateSubnet1Subnet934893E8",
    "vpcPrivateSubnet2DefaultRouteB0E07F99",
    "vpcPrivateSubnet2RouteTable7280F23E",
    "vpcPrivateSubnet2RouteTableAssociation007E94D3",
    "vpcPrivateSubnet2Subnet7031C2BA",
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1EIPDA49DCBE",
    "vpcPublicSubnet1NATGateway9C16659E",
    "vpcPublicSubnet1RouteTable48A2DF9B",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579",
    "vpcPublicSubnet1Subnet2E65531E",
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2EIP9B3743B1",
    "vpcPublicSubnet2NATGateway9B8AE11A",
    "vpcPublicSubnet2RouteTableEB40D4CB",
    "vpcPublicSubnet2RouteTableAssociation21F81B59",
    "vpcPublicSubnet2Subnet009B674F",
    "vpcA2121C38",
    "vpcVPCGW7984C166"
   ]
  },
  "ComputeEnv2C40ACC2": {
   "Type": "AWS::Batch::ComputeEnvironment",
   "Properties": {
    "Type": "MANAGED",
    "ComputeResources": {
     "AllocationStrategy": "BEST_FIT",
     "InstanceRole": {
      "Fn::GetAtt": [
       "ComputeEnvInstanceProfile81AFCCF2",
       "Arn"
      ]
     },
     "InstanceTypes": [
      "optimal"
     ],
     "MaxvCpus": 256,
     "MinvCpus": 0,
     "SecurityGroupIds": [
      {
       "Fn::GetAtt": [
        "ComputeEnvResourceSecurityGroupB84CF86B",
        "GroupId"
       ]
      }
     ],
     "Subnets": [
      {
       "Ref": "vpcPrivateSubnet1Subnet934893E8"
      },
      {
       "Ref": "vpcPrivateSubnet2Subnet7031C2BA"
      }
     ],
     "Type": "EC2"
    },
    "ServiceRole": {
     "Fn::GetAtt": [
      "ComputeEnvResourceServiceInstanceRoleCF89E9E1",
      "Arn"
     ]
    },
    "State": "ENABLED"
   },
   "DependsOn": [
    "vpcIGWE57CBDCA",
    "vpcPrivateSubnet1DefaultRoute1AA8E2E5",
    "vpcPrivateSubnet1RouteTableB41A48CC",
    "vpcPrivateSubnet1RouteTableAssociation67945127",
    "vpcPrivateSubnet1Subnet934893E8",
    "vpcPrivateSubnet2DefaultRouteB0E07F99",
    "vpcPrivateSubnet2RouteTable7280F23E",
    "vpcPrivateSubnet2RouteTableAssociation007E94D3",
    "vpcPrivateSubnet2Subnet7031C2BA",
    "vpcPublicSubnet1DefaultRoute10708846",
    "vpcPublicSubnet1EIPDA49DCBE",
    "vpcPublicSubnet1NATGateway9C16659E",
    "vpcPublicSubnet1RouteTable48A2DF9B",
    "vpcPublicSubnet1RouteTableAssociation5D3F4579",
    "vpcPublicSubnet1Subnet2E65531E",
    "vpcPublicSubnet2DefaultRouteA1EC0F60",
    "vpcPublicSubnet2EIP9B3743B1",
    "vpcPublicSubnet2NATGateway9B8AE11A",
    "vpcPublicSubnet2RouteTableEB40D4CB",
    "vpcPublicSubnet2RouteTableAssociation21F81B59",
    "vpcPublicSubnet2Subnet009B674F",
    "vpcA2121C38",
    "vpcVPCGW7984C166"
   ]
  },
  "JobQueueEE3AD499": {
   "Type": "AWS::Batch::JobQueue",
   "Properties": {
    "ComputeEnvironmentOrder": [
     {
      "ComputeEnvironment": {
       "Ref": "ComputeEnv2C40ACC2"
      },
      "Order": 1
     }
    ],
    "Priority": 1,
    "State": "ENABLED"
   }
  },
  "JobDefinition24FFE3ED": {
   "Type": "AWS::Batch::JobDefinition",
   "Properties": {
    "Type": "container",
    "ContainerProperties": {
     "Image": {
      "Fn::Join": [
       "",
       [
        {
         "Ref": "AWS::AccountId"
        },
        ".dkr.ecr.",
        {
         "Ref": "AWS::Region"
        },
        ".",
        {
         "Ref": "AWS::URLSuffix"
        },
        "/aws-cdk/assets:83bbeb367bcc1fa09f3c00f59110f8148dd3bbd860ba8fdca12399a9a284c2e0"
       ]
      ]
     },
     "Privileged": false,
     "ReadonlyRootFilesystem": false,
     "ResourceRequirements": [
      {
       "Type": "VCPU",
       "Value": "1"
      },
      {
       "Type": "MEMORY",
       "Value": "4"
      }
     ]
    },
    "PlatformCapabilities": [
     "EC2"
    ],
    "RetryStrategy": {
     "Attempts": 1
    },
    "Timeout": {}
   }
  },
  "StateMachineRoleB840431D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": {
         "Fn::FindInMap": [
          "ServiceprincipalMap",
          {
           "Ref": "AWS::Region"
          },
          "states"
         ]
        }
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "StateMachineRoleDefaultPolicyDF1E6607": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": "batch:SubmitJob",
       "Effect": "Allow",
       "Resource": [
        {
         "Fn::Join": [
          "",
          [
           "arn:",
           {
            "Ref": "AWS::Partition"
           },
           ":batch:",
           {
            "Ref": "AWS::Region"
           },
           ":",
           {
            "Ref": "AWS::AccountId"
           },
           ":job-definition/*"
          ]
         ]
        },
        {
         "Ref": "JobQueueEE3AD499"
        }
       ]
      },
      {
       "Action": [
        "events:PutTargets",
        "events:PutRule",
        "events:DescribeRule"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":events:",
          {
           "Ref": "AWS::Region"
          },
          ":",
          {
           "Ref": "AWS::AccountId"
          },
          ":rule/StepFunctionsGetEventsForBatchJobsRule"
         ]
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "StateMachineRoleDefaultPolicyDF1E6607",
    "Roles": [
     {
      "Ref": "StateMachineRoleB840431D"
     }
    ]
   }
  },
  "StateMachine2E01A3A5": {
   "Type": "AWS::StepFunctions::StateMachine",
   "Properties": {
    "RoleArn": {
     "Fn::GetAtt": [
      "StateMachineRoleB840431D",
      "Arn"
     ]
    },
    "DefinitionString": {
     "Fn::Join": [
      "",
      [
       "{\"StartAt\":\"Start\",\"States\":{\"Start\":{\"Type\":\"Pass\",\"Result\":{\"bar\":\"SomeValue\"},\"Next\":\"Submit Job\"},\"Submit Job\":{\"End\":true,\"Parameters\":{\"JobDefinition\":\"",
       {
        "Ref": "JobDefinition24FFE3ED"
       },
       "\",\"JobName\":\"MyJob\",\"JobQueue\":\"",
       {
        "Ref": "JobQueueEE3AD499"
       },
       "\",\"Parameters\":{\"foo.$\":\"$.bar\"},\"ContainerOverrides\":{\"Environment\":[{\"Name\":\"key\",\"Value\":\"value\"}],\"Memory\":256,\"Vcpus\":1},\"RetryStrategy\":{\"Attempts\":3},\"Timeout\":{\"AttemptDurationSeconds\":60}},\"Type\":\"Task\",\"Resource\":\"arn:",
       {
        "Ref": "AWS::Partition"
       },
       ":states:::batch:submitJob.sync\"}}}"
      ]
     ]
    }
   },
   "DependsOn": [
    "StateMachineRoleDefaultPolicyDF1E6607",
    "StateMachineRoleB840431D"
   ]
  }
 },
 "Outputs": {
  "JobQueueArn": {
   "Value": {
    "Ref": "JobQueueEE3AD499"
   }
  },
  "StateMachineArn": {
   "Value": {
    "Ref": "StateMachine2E01A3A5"
   }
  }
 },
 "Mappings": {
  "ServiceprincipalMap": {
   "af-south-1": {
    "states": "states.af-south-1.amazonaws.com"
   },
   "ap-east-1": {
    "states": "states.ap-east-1.amazonaws.com"
   },
   "ap-northeast-1": {
    "states": "states.ap-northeast-1.amazonaws.com"
   },
   "ap-northeast-2": {
    "states": "states.ap-northeast-2.amazonaws.com"
   },
   "ap-northeast-3": {
    "states": "states.ap-northeast-3.amazonaws.com"
   },
   "ap-south-1": {
    "states": "states.ap-south-1.amazonaws.com"
   },
   "ap-southeast-1": {
    "states": "states.ap-southeast-1.amazonaws.com"
   },
   "ap-southeast-2": {
    "states": "states.ap-southeast-2.amazonaws.com"
   },
   "ap-southeast-3": {
    "states": "states.ap-southeast-3.amazonaws.com"
   },
   "ca-central-1": {
    "states": "states.ca-central-1.amazonaws.com"
   },
   "cn-north-1": {
    "states": "states.cn-north-1.amazonaws.com"
   },
   "cn-northwest-1": {
    "states": "states.cn-northwest-1.amazonaws.com"
   },
   "eu-central-1": {
    "states": "states.eu-central-1.amazonaws.com"
   },
   "eu-north-1": {
    "states": "states.eu-north-1.amazonaws.com"
   },
   "eu-south-1": {
    "states": "states.eu-south-1.amazonaws.com"
   },
   "eu-south-2": {
    "states": "states.eu-south-2.amazonaws.com"
   },
   "eu-west-1": {
    "states": "states.eu-west-1.amazonaws.com"
   },
   "eu-west-2": {
    "states": "states.eu-west-2.amazonaws.com"
   },
   "eu-west-3": {
    "states": "states.eu-west-3.amazonaws.com"
   },
   "me-south-1": {
    "states": "states.me-south-1.amazonaws.com"
   },
   "sa-east-1": {
    "states": "states.sa-east-1.amazonaws.com"
   },
   "us-east-1": {
    "states": "states.us-east-1.amazonaws.com"
   },
   "us-east-2": {
    "states": "states.us-east-2.amazonaws.com"
   },
   "us-gov-east-1": {
    "states": "states.us-gov-east-1.amazonaws.com"
   },
   "us-gov-west-1": {
    "states": "states.us-gov-west-1.amazonaws.com"
   },
   "us-iso-east-1": {
    "states": "states.amazonaws.com"
   },
   "us-iso-west-1": {
    "states": "states.amazonaws.com"
   },
   "us-isob-east-1": {
    "states": "states.amazonaws.com"
   },
   "us-west-1": {
    "states": "states.us-west-1.amazonaws.com"
   },
   "us-west-2": {
    "states": "states.us-west-2.amazonaws.com"
   }
  }
 }
}
